[tool.poetry]
name = "amocrm-v2"
version = "0.1.0"
description = ""
authors = ["root <roman.shmelev@skyfort.capital>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.12"
fastapi = {extras = ["all"], version = "^0.110.1"}
pydantic-settings = "^2.2.1"
environ = "^1.0"
python-dotenv = "^1.0.1"
pyjwt = "^2.8.0"
aiohttp = "^3.9.4"
uvicorn = "^0.29.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.29"}
alembic = "^1.13.1"
asyncpg = "^0.29.0"
pydantic = "^2.7.1"
requests = "^2.31.0"
pandas = "^2.2.2"
scikit-learn = "^1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
